<resources>
    <string name="app_name">AndroidTest-alwakalat</string>
    <string name="login">Login</string>
    <string name="please_enter_your_credentials">Please Enter Your Username And Password Tp Access Your Account.</string>
    <string name="logo">logo</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
</resources>